--- a/load_gpt2_xl.ipynb
+++ b/load_gpt2_xl.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x7fcb11bde920>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x7f804517b730>"
       ]
      },
      "execution_count": 1,
@@ -30,23 +30,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/slava/safety/steering/.venv/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3e6439e3d45848b78dd5d2396a700195",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/689 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded pretrained model gpt2-xl into HookedTransformer\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "de29d7745b3d4eff91cd76c38b2c57a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/6.43G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -56,25 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Run name: 51200-L1-8e-05-LR-0.0004-Tokens-2.000e+06\n",
-      "n_tokens_per_buffer (millions): 0.262144\n",
-      "Lower bound: n_contexts_per_buffer (millions): 0.002048\n",
-      "Total training steps: 488\n",
-      "Total wandb updates: 4\n",
-      "n_tokens_per_feature_sampling_window (millions): 524.288\n",
-      "n_tokens_per_dead_feature_window (millions): 2621.44\n",
-      "We will reset the sparsity calculation 0 times.\n",
-      "Number tokens in sparsity calculation window: 4.10e+06\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sae_lens.toolkit.pretrained_saes import get_gpt2_res_jb_saes\n",
     "from sae_lens.training.sparse_autoencoder import SparseAutoencoder\n",
@@ -141,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,23 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([50.7812, 49.5312, 26.0781, 20.3281, 20.2812, 19.3594, 18.5000, 16.7812,\n",
-       "         16.3906, 13.1094], device='cuda:0', dtype=torch.float16),\n",
-       " tensor([49395,   126,   409, 39324, 44188, 14643, 22759,  1104,  5883,  5913],\n",
-       "        device='cuda:0'))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def top_acts_at_pos(text, pos=-1, silent=True, prepend_bos=True, n_top=10):\n",
     "    logits, cache = model.run_with_cache(text, prepend_bos=prepend_bos)\n",
@@ -194,30 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([65.2500, 43.9062, 26.2188, 23.8750, 23.5938, 21.7500, 19.1719, 16.3906,\n",
-       "         15.8984, 13.6094], device='cuda:0', dtype=torch.float16),\n",
-       " tensor([  126, 20811,   409, 44188,  4524,  4364, 12006, 33085, 22759, 25116],\n",
-       "        device='cuda:0'))"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "top_acts_at_pos(\"Anger\", pos=-1) # [126, 20811, 4524 ...]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,74 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/slava/safety/steering/.venv/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded pretrained model gpt2-xl into HookedTransformer\n",
-      "Moving model to device:  cuda\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/slava/safety/steering/.venv/lib/python3.10/site-packages/datasets/load.py:1486: FutureWarning: The repository for Skylion007/openwebtext contains custom code which must be executed to correctly load the dataset. You can inspect the repository content at https://hf.co/datasets/Skylion007/openwebtext\n",
-      "You can avoid this message in future by passing the argument `trust_remote_code=True`.\n",
-      "Passing `trust_remote_code=True` will be mandatory to load this dataset from the next major release of `datasets`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Run name: 51200-L1-8e-05-LR-0.0004-Tokens-2.000e+06\n",
-      "n_tokens_per_buffer (millions): 0.262144\n",
-      "Lower bound: n_contexts_per_buffer (millions): 0.002048\n",
-      "Total training steps: 488\n",
-      "Total wandb updates: 4\n",
-      "n_tokens_per_feature_sampling_window (millions): 524.288\n",
-      "n_tokens_per_dead_feature_window (millions): 2621.44\n",
-      "We will reset the sparsity calculation 0 times.\n",
-      "Number tokens in sparsity calculation window: 4.10e+06\n",
-      "Run name: 51200-L1-8e-05-LR-0.0004-Tokens-2.000e+06\n",
-      "n_tokens_per_buffer (millions): 0.262144\n",
-      "Lower bound: n_contexts_per_buffer (millions): 0.002048\n",
-      "Total training steps: 488\n",
-      "Total wandb updates: 4\n",
-      "n_tokens_per_feature_sampling_window (millions): 524.288\n",
-      "n_tokens_per_dead_feature_window (millions): 2621.44\n",
-      "We will reset the sparsity calculation 0 times.\n",
-      "Number tokens in sparsity calculation window: 4.10e+06\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7acc411f36c44b9b63c46c227d0fdaa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/8192 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm.auto import tqdm\n",
     "\n",
@@ -332,37 +236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([24576, 128])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_tokens.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.98984375\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# okay so 126 is the anger feature right? Wrong!\n",
     "# 126 activates on most text\n",
@@ -384,71 +269,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b3b8bed953943d0b144350babfccd8d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Forward passes to cache data for vis:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2283dc41c36b4bfebd2928928d88cdef",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Extracting vis data from cached data:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━┳━━━━━━━┓\n",
-       "┃<span style=\"font-weight: bold\"> Task                                           </span>┃<span style=\"font-weight: bold\"> Time  </span>┃<span style=\"font-weight: bold\"> Pct % </span>┃\n",
-       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━╇━━━━━━━┩\n",
-       "│ (1) Initialization                             │ 0.00s │ 0.0%  │\n",
-       "│ (2) Forward passes to gather model activations │ 0.67s │ 46.8% │\n",
-       "│ (3) Computing feature acts from model acts     │ 0.29s │ 20.5% │\n",
-       "│ (4) Getting data for tables                    │ 0.00s │ 0.1%  │\n",
-       "│ (5) Getting data for histograms                │ 0.10s │ 7.3%  │\n",
-       "│ (6) Getting data for sequences                 │ 0.10s │ 6.8%  │\n",
-       "│ (7) Getting data for quantiles                 │ 0.26s │ 18.5% │\n",
-       "└────────────────────────────────────────────────┴───────┴───────┘\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━┳━━━━━━━┓\n",
-       "┃\u001b[1m \u001b[0m\u001b[1mTask                                          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mTime \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mPct %\u001b[0m\u001b[1m \u001b[0m┃\n",
-       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━╇━━━━━━━┩\n",
-       "│ (1) Initialization                             │ 0.00s │ 0.0%  │\n",
-       "│ (2) Forward passes to gather model activations │ 0.67s │ 46.8% │\n",
-       "│ (3) Computing feature acts from model acts     │ 0.29s │ 20.5% │\n",
-       "│ (4) Getting data for tables                    │ 0.00s │ 0.1%  │\n",
-       "│ (5) Getting data for histograms                │ 0.10s │ 7.3%  │\n",
-       "│ (6) Getting data for sequences                 │ 0.10s │ 6.8%  │\n",
-       "│ (7) Getting data for quantiles                 │ 0.26s │ 18.5% │\n",
-       "└────────────────────────────────────────────────┴───────┴───────┘\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sae_vis.data_config_classes import SaeVisConfig\n",
     "from sae_vis.data_storing_fns import SaeVisData\n",
@@ -474,88 +297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d8f401dd93f4e1fbe608d53bf60caf4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Saving feature-centric vis:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<a href='feature_vis/126_feature_vis.html' target='_blank'>feature_vis/126_feature_vis.html</a><br>"
-      ],
-      "text/plain": [
-       "/home/slava/safety/steering/feature_vis/126_feature_vis.html"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "678cf7d320604accb9e269aa53e985a2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Saving feature-centric vis:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<a href='feature_vis/20811_feature_vis.html' target='_blank'>feature_vis/20811_feature_vis.html</a><br>"
-      ],
-      "text/plain": [
-       "/home/slava/safety/steering/feature_vis/20811_feature_vis.html"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d640863568342f0b9ad36eb52d340ef",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Saving feature-centric vis:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<a href='feature_vis/409_feature_vis.html' target='_blank'>feature_vis/409_feature_vis.html</a><br>"
-      ],
-      "text/plain": [
-       "/home/slava/safety/steering/feature_vis/409_feature_vis.html"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from IPython.display import FileLink\n",
@@ -574,46 +318,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([60.2188, 43.5312, 25.0625, 16.5625, 16.2969, 12.7969, 12.0156, 10.2422,\n",
-       "          9.4375,  9.1172], device='cuda:0', dtype=torch.float16),\n",
-       " tensor([  126, 41137,   409, 28732, 44188, 22759,  5883, 43778, 35851, 18118],\n",
-       "        device='cuda:0'))"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "top_acts_at_pos(\" any text you like!\", pos=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([652.5000, 517.0000, 501.7500, 490.7500, 485.2500, 473.5000, 466.2500,\n",
-       "         450.2500, 415.7500, 377.7500], device='cuda:0', dtype=torch.float16),\n",
-       " tensor([30958, 47390, 41028,  1212, 40249,  3370,  9507, 10284, 30590, 17048],\n",
-       "        device='cuda:0'))"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# also, another crazy thing about this SAE:\n",
     "# the 0th token causes some features to activate with crazy high magnitude\n",
@@ -622,23 +338,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([616.5000, 490.0000, 475.0000, 460.2500, 446.5000, 445.5000, 437.5000,\n",
-       "         420.0000, 388.2500, 376.2500], device='cuda:0', dtype=torch.float16),\n",
-       " tensor([30958, 47390,  1212, 41028, 40249,  9507,  3370, 10284, 30590, 42322],\n",
-       "        device='cuda:0'))"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# same thing with and without BOS\n",
     "top_acts_at_pos(\" hello\", pos=0, prepend_bos=False)"
@@ -646,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,75 +385,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(43.90625, 20811),\n",
-       " (21.75, 4364),\n",
-       " (16.390625, 33085),\n",
-       " (11.4921875, 25473),\n",
-       " (10.84375, 34590),\n",
-       " (10.1796875, 11977),\n",
-       " (8.78125, 21255),\n",
-       " (8.1171875, 12346),\n",
-       " (6.46875, 21981),\n",
-       " (5.80859375, 37635)]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "angry[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<a href='feature_vis/20811_feature_vis.html' target='_blank'>feature_vis/20811_feature_vis.html</a><br>"
-      ],
-      "text/plain": [
-       "/home/slava/safety/steering/feature_vis/20811_feature_vis.html"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<a href='feature_vis/4364_feature_vis.html' target='_blank'>feature_vis/4364_feature_vis.html</a><br>"
-      ],
-      "text/plain": [
-       "/home/slava/safety/steering/feature_vis/4364_feature_vis.html"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<a href='feature_vis/33085_feature_vis.html' target='_blank'>feature_vis/33085_feature_vis.html</a><br>"
-      ],
-      "text/plain": [
-       "/home/slava/safety/steering/feature_vis/33085_feature_vis.html"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_feature_idx_gpt = [20811, 4364, 33085]\n",
     "\n",
@@ -781,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +466,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -835,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
